firebase config and authentication services created

--- a/web/index.html
+++ b/web/index.html
@@ -31,8 +31,27 @@
 
   <title>food_review_app</title>
   <link rel="manifest" href="manifest.json">
+  
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+  <script src="flutter_bootstrap.js" async></script> 
+ <script>
+  <!--  Workaround for CORS to allow images to show in WebPage for Development  -->
+  let config = {renderer: "html"}
+
+  window.addEventListener('load', function(ev) {
+    // Download main.dart.js
+    _flutter.loader.loadEntrypoint({
+      serviceWorker: {
+        serviceWorkerVersion: serviceWorkerVersion,
+      },
+      onEntrypointLoaded: function(engineInitializer) {
+        engineInitializer.initializeEngine(config).then(function(appRunner) {
+          appRunner.runApp();
+        });
+      }
+    });
+  });
+</script>
 </body>
 </html>
